# c-dns

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  cdns.c  link_and_run_test.sh  main.c  main.cpp
cmake/: FindCBOR.cmake
distro/: README.md
distro/config/: apkg.toml
distro/pkg/arch/: PKGBUILD
distro/pkg/deb/: changelog  control  copyright  libcdns-dev.install  libcdns0.install  libcdns1.install
distro/pkg/rpm/: libcdns.spec
distro/scripts/: make-archive.sh  upstream-version.py
python/: py_block.cpp  py_block_table.cpp  py_cdns.cpp  py_cdns_decoder.cpp  py_cdns_encoder.cpp  py_common.h  py_dns.cpp  py_file_preamble.cpp  py_format_specification.cpp  py_interface.cpp  py_timestamp.cpp  py_writer.cpp  pycdns.cpp  pyproject.toml  setup.py.in
scripts/: build_obs.sh  prepare_obs.sh
src/: block.cpp  block.h  block_parameters.c  block_parameters.cpp  block_parameters.h  block_table.c  block_table.h  cdns.c  cdns.cpp  cdns.h  cdns.pc.in  cdns_decoder.cpp  cdns_decoder.h  cdns_encoder.cpp  cdns_encoder.h  collection_parameters.c  collection_parameters.h  dns.h  file_preamble.cpp  file_preamble.h  format_specification.h  hash.h  interface.cpp  interface.h  storage_parameters.c  storage_parameters.h  timestamp.cpp  timestamp.h  writer.cpp  writer.h
tests/: CMakeLists.txt  block_table_test.h  block_test.h  cdns_decoder_test.h  cdns_encoder_test.h  cdns_exporter_test.h  cdns_reader_test.h  common.h  file_preamble_test.h  hash_test.h  tests.cpp  timestamp_test.h  writer_test.h
tests/python/: common.py  test_block.py  test_block_table.py  test_cdns_decoder.py  test_cdns_encoder.py  test_cdns_exporter.py  test_cdns_reader.py  test_file_preamble.py  test_timestamp.py  test_writer.py
